--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 /* Header styles */
 header {
-    background: url('Guinea01.jpg') no-repeat center center/cover;
+    background: url('Guinea01.jpeg') no-repeat center center/cover;
     color: #ffffff;
     padding: 100px 0;
     text-align: center;
